--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:background="@color/primary"
+        android:background="#40121212"
         android:visibility="gone"
         app:itemIconTint="#777777"
         app:itemTextColor="#777777"
