--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="gray">#60FFFFFF</color>
     <color name="input_gray">#777777</color>
     <color name="purple">#9854B2</color>
+    <color name="card_green">#678026</color>
     <color name="filled_gray">#282828</color>
     <color name="txt_gray">#B3B3B3</color>
     <color name="btn_gray">#535353</color>
