--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -18,6 +18,9 @@
         <action
             android:id="@+id/action_libraryFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_libraryFragment_to_albumViewFragment"
+            app:destination="@id/albumViewFragment" />
     </fragment>
     <action
         android:id="@+id/toLibrary"
