--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,9 +40,9 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/musicPlayer"
         android:layout_width="0dp"
+        android:visibility="gone"
         android:layout_height="60dp"
         android:layout_marginBottom="2dp"
-        android:visibility="gone"
         android:backgroundTint="@color/music_blue"
         app:cardCornerRadius="12dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNav"
@@ -80,8 +80,8 @@
 
             <ImageView
                 android:id="@+id/imgPause"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_marginEnd="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
