--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -141,7 +141,11 @@
         android:id="@+id/albumViewFragment"
         android:name="com.example.spotifyclone.ui.fragments.others.AlbumViewFragment"
         android:label="fragment_album_view"
-        tools:layout="@layout/fragment_album_view" />
+        tools:layout="@layout/fragment_album_view" >
+        <action
+            android:id="@+id/action_albumViewFragment_to_addPlaylistFragment"
+            app:destination="@id/addPlaylistFragment" />
+    </fragment>
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.example.spotifyclone.ui.fragments.settings.SettingsFragment"
@@ -176,6 +180,11 @@
             app:popUpTo="@id/libraryFragment"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/addPlaylistFragment"
+        android:name="com.example.spotifyclone.ui.fragments.others.AddPlaylistFragment"
+        android:label="fragment_add_playlist"
+        tools:layout="@layout/fragment_add_playlist" />
 
 
 </navigation>
