added: fix bugs, fix seekbar user interaction ,

--- a/app/src/main/res/layout/fragment_track_view.xml
+++ b/app/src/main/res/layout/fragment_track_view.xml
@@ -27,6 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_shrink"
+        android:paddingVertical="15dp"
+        android:paddingEnd="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/txtTrackName"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toTopOf="@+id/topGuideline" />
@@ -35,7 +37,7 @@
         android:id="@+id/txtTrackName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="TextView"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -60,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:text="TextView"
+        tools:text="TextView"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -73,7 +75,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        tools:text="TextView"
         android:textColor="@color/txt_gray"
         android:textSize="16sp"
         android:textStyle="bold"
