--- a/app/src/main/res/layout/item_album_tracks.xml
+++ b/app/src/main/res/layout/item_album_tracks.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
-        android:text="TextView"
+        tools:text="TextView"
         android:layout_marginStart="8dp"
         app:layout_goneMarginLeft="0dp"
         android:textColor="@color/white"
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="TextView"
+        tools:text="TextView"
         android:textColor="@color/txt_gray"
         app:layout_constraintBottom_toBottomOf="@+id/imgAlbum"
         app:layout_constraintStart_toEndOf="@+id/imgAlbum"
@@ -49,7 +49,8 @@
         android:id="@+id/imgMore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/txtTrackName"
+        android:padding="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtAlbumName"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/icon_more" />
 
