--- a/app/src/main/res/anim/slide_in.xml
+++ b/app/src/main/res/anim/slide_in.xml
@@ -1,6 +1,6 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-        android:fromXDelta="100%p"
-        android:toXDelta="0"
-        android:duration="300" />
+        android:duration="1000"
+        android:fromYDelta="0"
+        android:toYDelta="100%" />
 </set>
