--- a/app/src/main/res/anim/slide_out.xml
+++ b/app/src/main/res/anim/slide_out.xml
@@ -1,6 +1,6 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-        android:fromXDelta="0"
-        android:toXDelta="-100%p"
-        android:duration="300" />
+        android:fromYDelta="100%"
+        android:toYDelta="0"
+        android:duration="1000" />
 </set>
